--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
-    id 'fabric-loom' version '1.0.7'
+    id 'fabric-loom' version '1.4.4'
     id 'maven-publish'
+    id 'com.github.ben-manes.versions' version '0.49.0' // provides './gradlew dependencyUpdates'
+
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -25,7 +27,7 @@ dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
