--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.14
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.4
+fabric_loader_version=0.14.24
 
 # Mod Properties
-mod_version = 1.3.2
+mod_version = 1.20.2.0
 maven_group = leaf-decay
 archives_base_name = leaf-decay
 
 # Dependencies
-fabric_version=0.74.0+1.19.3
+fabric_version=0.90.7+1.20.2
 cloth_config_version = 7.0.72
 mod_menu_version = 5.0.2
